--- a/style.css
+++ b/style.css
@@ -14,13 +14,17 @@ li{
    
 }
 .logoContener{
+    display: flex;
+    align-items: center;
      align-self: center;
+     gap: 20px;
+    
     
 }
 .navLogoSpan{
    
     font-size: 25px;
-    color: rgb(255, 255, 255);
+    color: rgb(131, 215, 235) ;
 
 }
 .ahref{
