--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+
+
 .contenerNAV{
 display: flex;
 justify-content: space-around;
@@ -26,7 +31,13 @@ li{
 .navLogoSpan{
    
     font-size: 25px;
-    color: rgb(131, 215, 235) ;
+    background: #299BFF;
+background: radial-gradient(circle farthest-side at center center, #299BFF 62%, #0AD6FF 80%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+
+
+    font-family: 'Roboto', sans-serif;
 
 }
 .ahref{
@@ -36,7 +47,10 @@ li{
 
 }
 .ahref:hover{
-    color: rgb(131, 215, 235);
+    background: #299BFF;
+background: radial-gradient(circle farthest-side at center center, #299BFF 62%, #0AD6FF 80%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
 }
 body {
     background-color: rgb(30, 26, 86);
