--- a/style.css
+++ b/style.css
@@ -132,4 +132,70 @@ h4 {
   font-size: 20px;
   font-weight: 200;
 }
+.ourTeam{
+  
 
+  
+  
+}
+.ourTeamContener{
+ 
+  height: 600px;
+  background-image: url(res/bgk-header.png);
+  background-size: cover;
+  background-position: top center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+.teamText{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding-top: 50px;
+}
+h1 {
+  color: white;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 100;
+}
+h2 {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 100;
+}
+h3 {
+  color: rgb(252, 252, 252);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 50;
+}
+.theTeam{
+  width: 900px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+ gap: 30px;
+
+  
+}
+.teamCard{
+  border: 1px solid rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+}
+.teamButton{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
