People Say nont ready

--- a/style.css
+++ b/style.css
@@ -122,3 +122,40 @@ h4 {
   font-size: 20px;
   font-weight: 200;
 }
+
+.containerPeopleSay {
+  display: flex;
+}
+
+form {
+  flex-basis: 50%;
+  padding-right: 20px;
+}
+
+.image-column {
+  flex-basis: 25%;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 767px) {
+  .container {
+    flex-direction: column;
+  }
+
+  form,
+  .image-column {
+    flex-basis: 100%;
+    padding-right: 0;
+  }
+}
+
+.contenerSay {
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+}
