--- a/style.css
+++ b/style.css
@@ -122,8 +122,68 @@ h4 {
   font-size: 20px;
   font-weight: 200;
 }
+.ourTeamContener {
+  background-image: url(res/bgk-header.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+
+  width: 100%;
+ padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  gap: 20px;
+
+}
+.teamText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.theTeam{
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+.teamCard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.teamButton{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
 .containerPeopleSay {
   display: flex;
+}
+h1 {
+  font-size: 20px;
+  font-weight: lighter;
+  color: white;
+  text-align: center;
+}
+h2 {
+  font-size: 20px;
+  font-weight: lighter;
+  color: white;
+  text-align: center;
+}
+h3 {font-size: 20px;
+  font-weight: lighter;
+  color: white;
+  text-align: center;
 }
 
 form {
