--- a/style.css
+++ b/style.css
@@ -168,19 +168,19 @@ h4 {
 .containerPeopleSay {
   display: flex;
 }
-h1 {
+.h1Team{
   font-size: 20px;
   font-weight: lighter;
   color: white;
   text-align: center;
 }
-h2 {
+.h2Team{
   font-size: 20px;
   font-weight: lighter;
   color: white;
   text-align: center;
 }
-h3 {font-size: 20px;
+.h3Team {font-size: 20px;
   font-weight: lighter;
   color: white;
   text-align: center;
