--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h4 {
   height: 800px;
   display: flex;
   justify-content: center;
-  gap: 20px;
+
   margin-top: 40px;
   margin-bottom: 20px;
   flex-wrap: wrap;
@@ -153,10 +153,24 @@ padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  justify-content: center;
   width: 400px;
-  margin-top: 30px;
+  gap: 20px;
   
+  
+  
+  
+}
+#borderLeft{
+border-left: 0.5px solid rgb(0, 0, 0);
+border-bottom: 0.5px solid rgb(0, 0, 0);
+}
+#borederRight{
+border-right: 0.5px solid rgb(0, 0, 0);
+border-top: 0.5px solid rgb(0, 0, 0);
+}
+#borederGame{
+  border-right: 0.5px solid rgb(0, 0, 0);
   
 }
 .h2Expertise {
