--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ button:hover {
   background-color: transparent;
 }
 .contenerOurStory {
-  
   display: flex;
   justify-content: center;
   gap: 50px;
@@ -243,7 +242,7 @@ h4 {
   flex-direction: column;
   align-items: center;
   width: 100%;
-
+}
 
 .ContainerPeopleSay {
   width: 100%;
@@ -252,7 +251,6 @@ h4 {
   gap: 50px;
   padding: 30px;
   height: 800px;
-
 }
 .expertiseText {
   display: flex;
@@ -262,7 +260,6 @@ h4 {
   margin-top: 20px;
 }
 .ourExpertise {
-  
   width: 1600px;
   height: 800px;
   display: flex;
@@ -271,34 +268,28 @@ h4 {
   margin-top: 40px;
   margin-bottom: 20px;
   flex-wrap: wrap;
-padding: 20px;
+  padding: 20px;
 }
-.expertiseCard{
+.expertiseCard {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 400px;
   gap: 20px;
-  
-  
-  
-  
 }
-#borderLeft{
-border-left: 0.5px solid rgb(0, 0, 0);
-border-bottom: 0.5px solid rgb(0, 0, 0);
+#borderLeft {
+  border-left: 0.5px solid rgb(0, 0, 0);
+  border-bottom: 0.5px solid rgb(0, 0, 0);
 }
-#borederRight{
-border-right: 0.5px solid rgb(0, 0, 0);
-border-top: 0.5px solid rgb(0, 0, 0);
-}
-#borederGame{
+#borederRight {
   border-right: 0.5px solid rgb(0, 0, 0);
-  
+  border-top: 0.5px solid rgb(0, 0, 0);
+}
+#borederGame {
+  border-right: 0.5px solid rgb(0, 0, 0);
 }
 .h2Expertise {
-  
   font-size: 20px;
   text-align: center;
 }
@@ -309,7 +300,7 @@ border-top: 0.5px solid rgb(0, 0, 0);
   color: rgb(0, 0, 0);
   text-align: center;
 }
-.h3ExpertisetTitle{
+.h3ExpertisetTitle {
   width: 600px;
   font-size: 20px;
   font-weight: lighter;
@@ -324,13 +315,12 @@ border-top: 0.5px solid rgb(0, 0, 0);
   background-position: bottom center;
 
   width: 100%;
- padding-top: 30px;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  gap: 20px;
 
+  gap: 20px;
 }
 .teamText {
   display: flex;
@@ -338,12 +328,12 @@ border-top: 0.5px solid rgb(0, 0, 0);
   align-items: center;
   gap: 20px;
 }
-.theTeam{
+.theTeam {
   display: flex;
   gap: 20px;
   justify-content: center;
 }
-.teamCard{
+.teamCard {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -351,7 +341,7 @@ border-top: 0.5px solid rgb(0, 0, 0);
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.teamButton{
+.teamButton {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -363,19 +353,20 @@ border-top: 0.5px solid rgb(0, 0, 0);
 .containerPeopleSay {
   display: flex;
 }
-.h1Team{
+.h1Team {
   font-size: 20px;
   font-weight: lighter;
   color: white;
   text-align: center;
 }
-.h2Team{
+.h2Team {
   font-size: 20px;
   font-weight: lighter;
   color: white;
   text-align: center;
 }
-.h3Team {font-size: 20px;
+.h3Team {
+  font-size: 20px;
   font-weight: lighter;
   color: white;
   text-align: center;
@@ -406,7 +397,6 @@ border-top: 0.5px solid rgb(0, 0, 0);
   width: 200px;
 }
 
-=======
 .FormContainer {
   width: 600px;
 }
@@ -424,13 +414,7 @@ border-top: 0.5px solid rgb(0, 0, 0);
   width: 200px;
 }
 
-
 .Logos {
   width: 100px;
   height: 100px;
 }
-
-
-
-
-
