pretty much done

--- a/style.css
+++ b/style.css
@@ -311,7 +311,106 @@ input::placeholder{
   width: 200px;
   
 }
+.footerContenair{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  background-image: url(res/bgk-footer.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  width: 100%;
+  height: 400px;
+}
+.contenairLogo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 
+}
+.contenairOurStudio{
+  display: flex;
+  flex-direction:column;
+  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
 
+  gap: 20px;
 
+}
+.logoFooter{
+  display: flex;
+  align-items:center;
+  gap: 20px;
+}
+.textOurStudio{
+  display: flex;
+ 
+  align-items:flex-start;
+  gap: 20px;
+}
+.underTheLogo{
+  width: 200px;
+  color: white;
+  font-size: 20px;
+  font-weight: lighter;
+  text-align: center;
+}
+.termOfuse{
+  
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+.h3termOfUse{
+  
+  font-weight: lighter;
+  color: white;
+  text-align: center;
+  width: 200;
+}
+.h2OurStudio, .h2stayINtouch{
+  font-size: 20px;
+  font-weight: lighter;
+  color: white;
+  text-align: center;
+  margin : 40px;
 
+}
+.phoneNum{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.span{
+  font-size: 20px;
+  font-weight: lighter;
+  color: white;
+  text-align: center;
+  width: 300px;
+}
+.contenairStayInTouch{
+display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 20px;
+
+}
+.inputStay{
+  width: 200px;
+}
+.newsletter{
+  display: flex;
+  align-items: center;;
+  gap: 10px;
+}
+.socialMedia{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 30px;
+ 
+}
