--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ li {
 }
 .navLogoSpan {
   font-size: 25px;
-  background: #0080FF;
-background: radial-gradient(circle farthest-corner at center center, #0080FF 43%, #00C3FF 77%);
+  background: #2994FF;
+background: radial-gradient(circle farthest-corner at center center, #2994FF 47%, #00BBFF 100%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
+
 
   font-family: "Roboto", sans-serif;
 }
@@ -39,11 +40,11 @@ background: radial-gradient(circle farthest-corner at center center, #0080FF 43%
 }
 .ahref:hover {
   
-  background: #0080FF;
-background: radial-gradient(circle farthest-corner at center center, #0080FF 43%, #00C3FF 77%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-
+  background: #2994FF;
+  background: radial-gradient(circle farthest-corner at center center, #2994FF 47%, #00BBFF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
 }
 
 .contenerHome {
@@ -89,11 +90,11 @@ button {
 }
 
 button:hover {
-  background: #0080FF;
-background: radial-gradient(circle farthest-corner at center center, #0080FF 43%, #00C3FF 77%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-
+  background: #2994FF;
+  background: radial-gradient(circle farthest-corner at center center, #2994FF 47%, #00BBFF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
 }
 .contenerOurStory {
   display: flex;
