--- a/style.css
+++ b/style.css
@@ -230,7 +230,6 @@ h4 {
   padding-top: 30px;
 }
 
-}
 .h1Team {
   font-size: 20px;
   font-weight: lighter;
@@ -253,65 +252,77 @@ h4 {
 .ContainerPeopleSay {
   width: 100%;
   display: flex;
+  justify-content: center;
   flex-direction: row;
-  gap: 20px;
+  gap: 100px;
+  margin-top: -100px;
 }
 
 .FormContainer {
-  display: flex;
-  flex-direction: column;
+  display: flex-start;
   align-items: center;
-  justify-content: center;
-  width: 600px;
-  
+  flex-direction: column;
+  gap: 100px;
+  margin-top: 160px;
 }
-.form{
+.form {
   display: flex;
   flex-direction: column;
-  
-  
 }
-.mes {
-  width: 400px;
-  height: 100px;
-}
+
 input {
-  width: 400px;
-  height: 25px;
-  place
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
 }
-input::placeholder{
-  opacity: 0.5;
-   position: relative;
-   left: +10px;
+.type-1 {
+  border: 1px solid #eee;
+  transition: 0.3s;
+}
+.type-1:hover {
+  border: 1px solid #aaa;
+}
 
-}
-.mes::placeholder{
-  top: -40px;
-
-}
 .LogosContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 800px;
-  
 }
 
 .logoscolumn {
-  display: flex;
+  display: flex-start;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   width: 250px;
- 
-  gap:30px ;
+
+  gap: 30px;
 }
-.Logos{
-  width: 200px;
-  
+.Logos {
+  width: 60%;
+  height: auto;
+
+  gap: 25px;
+  margin-bottom: 10px;
+  margin-top: 28px;
 }
 
+.mes {
+  width: 400px;
+  height: 100px;
+  border: 2px solid #eee;
+}
 
+input {
+  width: 400px;
+  height: 25px;
+}
 
-
+input::placeholder {
+  opacity: 0.5;
+  position: relative;
+  left: +10px;
+}
+.mes::placeholder {
+  top: -40px;
+}
