--- a/style.css
+++ b/style.css
@@ -129,8 +129,12 @@ h4 {
   display: flex;
   justify-content: center;
   gap: 50px;
-  padding: 30px;
+  
+
   height: 800px;
+}
+.expertiseContener {
+  width: 100%;
 }
 .expertiseText {
   display: flex;
@@ -140,7 +144,7 @@ h4 {
   margin-top: 20px;
 }
 .ourExpertise {
-  width: 1600px;
+  width: 100%;
   height: 800px;
   display: flex;
   justify-content: center;
@@ -148,7 +152,7 @@ h4 {
   margin-top: 40px;
   margin-bottom: 20px;
   flex-wrap: wrap;
-  padding: 20px;
+  
 }
 .expertiseCard {
   display: flex;
