--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ h4 {
   justify-content: center;
   flex-direction: row;
   gap: 100px;
-  margin-top: -100px;
+  
 }
 
 .FormContainer {
@@ -286,6 +286,7 @@ h4 {
 .form {
   display: flex;
   flex-direction: column;
+  height: 375px;
 }
 
 input {
@@ -306,6 +307,8 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  
 }
 
 .logoscolumn {
